# qtengine

./: .gitignore  CMakeLists.txt  Justfile  README.md  flake.nix  shell.nix
.github/workflows/: lint.yml
nix/: default.nix  experimental.nix  hjem.nix  module.nix  options.nix  qt5engine.nix  qt6engine.nix
src/common/: CMakeLists.txt  common.cpp
src/common/config/: configmanager.cpp  configmanager.hpp
src/plugin/: CMakeLists.txt  main.cpp  platformtheme.cpp  platformtheme.hpp
src/qt5/: CMakeLists.txt
src/qt5/common/: CMakeLists.txt  common.hpp
src/qt5/common/config/: configmanager.cpp
src/qt5/common/dbus/: configwatcher.cpp  configwatcher.hpp
src/qt5/plugin/: CMakeLists.txt  main.cpp  platformtheme.cpp  platformtheme.hpp
src/qt5/style/: CMakeLists.txt  plugin.cpp  proxystyle.cpp
src/qt6/: CMakeLists.txt
src/qt6/common/: CMakeLists.txt  common.cpp
src/qt6/common/config/: configmanager.cpp  configmanager.hpp
src/qt6/common/dbus/: configwatcher.cpp
src/qt6/plugin/: CMakeLists.txt  engine.json  main.cpp  platformtheme.cpp
src/qt6/style/: CMakeLists.txt  plugin.cpp  proxystyle.cpp  proxystyle.hpp
src/style/: CMakeLists.txt  plugin.cpp  proxystyle.cpp  proxystyle.hpp
